# video-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-27-release-pipeline.md  2026-04-27-video-gen-v0.1.md  2026-04-30-rust-library-cli.md
docs/superpowers/specs/: 2026-04-27-release-pipeline-design.md  2026-04-27-video-gen-design.md  2026-04-30-rust-library-cli-design.md
src/: build.rs  discover.rs  error.rs  errors.ts  ffmpeg.rs  index.ts  lib.rs  log.rs  log.ts  main.rs  plan.rs
src/ffmpeg/: encode.ts  probe.ts  resolve.ts
src/pipeline/: build.ts  discover.ts  plan.ts
src/store/: paths.ts
tests/: cli.rs  discover.rs  e2e.rs  ffmpeg_args.rs  ffmpeg_resolve.rs  ffprobe_parse.rs  log.rs  log.test.ts  output_path.rs  plan.rs
tests/e2e/: build.test.ts  fixtures.ts
tests/ffmpeg/: encode.test.ts  probe.test.ts  resolve.test.ts
tests/pipeline/: discover.test.ts  plan.test.ts
tests/store/: paths.test.ts
