[package]
name = "video-gen"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "video_gen"
path = "src/lib.rs"

[[bin]]
name = "video-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
which = "7.0"

[dev-dependencies]
tempfile = "3.10"
